packages/svelte/tests/compiler-errors/samples/css-global-without-selector/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid-css-identifier',
		message: ':global() must contain a selector',
		position: [9, 9]
	}
});
